# vulkan-sprites

./: CMakeLists.txt  README.md  Renderer.cpp  Renderer.h  Renderer_test.cpp  ShaderLib.cpp  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  app.cpp  app.h  main.cpp
engine/: Area.cpp  Area.h  AreaAllocator.cpp  AreaAllocator.h  AreaAllocator_test.cpp  AreaList.cpp  AreaList.h  AreaList_test.cpp  Area_test.cpp  AtlasTexture.cpp  AtlasTexture.h  BoundBuffer.cpp  BoundBuffer.h  CMakeLists.txt  Curve.cpp  Curve.h  Curve_test.cpp  DebugMessenger.cpp  DebugMessenger.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  FontManager_test.cpp  Glyph.cpp  Glyph.h  ITexture.h  Logger.cpp  Logger.h  Particle.cpp  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystem_test.cpp  PhysicalDevice.cpp  PhysicalDevice.h  PipelineBloom.cpp  PipelineBloom.h  (+15 more)
engine/shaders/: bloom.frag  bloom.vert  shader.frag  shader.vert  sprite.frag
samples/blendmodes/: BlendModesApp.cpp  BlendModesApp.h  main.cpp
samples/breakout/: AppState.cpp  AppState.h  Ball.cpp  Ball.h  Ball_test.cpp  BreakOutApp.cpp  BreakOutApp.h  BrickCollection.cpp  BrickCollection.h  BrickCollection_test.cpp  GameOver.cpp  GameOver.h  Gameplay.cpp  Gameplay.h  MainMenu.cpp  MainMenu.h  Movable.cpp  Movable.h  Paddle.cpp  Paddle.h  Paddle_test.cpp  SplashScreen.cpp  SplashScreen.h  main.cpp  test_main.cpp
samples/curves/: CurvesApp.cpp  CurvesApp.h  main.cpp
samples/first/: FirstApp.cpp  FirstApp.h  main.cpp
samples/particles/: ParticlesApp.cpp  ParticlesApp.h  main.cpp
samples/second/: SecondApp.cpp  SecondApp.h  main.cpp
samples/text/: TextApp.cpp  TextApp.h  main.cpp
samples/textureatlas/: TextureAtlasApp.cpp  TextureAtlasApp.h  main.cpp
shaders/: shader.frag  shader.vert
